# waveshare_ups_monitor

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
ansible/: .gitignore  README.md  inventory.example.ini  playbook.yml
ansible/roles/waveshare_ups/: README.md
ansible/roles/waveshare_ups/defaults/: main.yml
ansible/roles/waveshare_ups/files/hooks/: battery-critical.sh  power-restored.sh
ansible/roles/waveshare_ups/handlers/: main.yml
ansible/roles/waveshare_ups/meta/: main.yml
ansible/roles/waveshare_ups/tasks/: main.yml  validate.yml
ansible/roles/waveshare_ups/templates/: config.toml.j2  waveshare-ups.service.j2
packaging/: config.toml.example  waveshare-ups.service
packaging/hooks/: battery-low.sh  battery-ok.sh  power-lost.sh
src/: battery.rs  config.rs  hooks.rs  main.rs  mqtt.rs  sensor.rs
